# SmartMail-AI-OpenEnv-Email-Triage-System

./: README.md  Readme.md  agent.py  data.py  env.py  inference.py  main.py  openenv.yaml  pyproject.toml  requirements.txt
email_tasks/hard/: grader.py
email_tasks/medium/: grader.py
server/: app.py
tasks/easy/: grader.py
tasks/medium/: grader.py
