[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "smartmail-ai"
version = "0.1.0"
description = "OpenEnv Email Classification Environment"
authors = [{name = "Yashwanth"}]

dependencies = [
    "fastapi",
    "uvicorn",
    "gradio",
    "openenv-core>=0.2.0"
]

[project.scripts]
server = "server.app:main"

[tool.setuptools]
packages = ["server", "email_tasks", "email_tasks.easy", "email_tasks.medium", "email_tasks.hard"]
py-modules = ["env", "agent", "inference"]
